--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="font-style.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./css/font-style.css">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/normalize.css">
 </head>
 
 <body>
-Required
+	<button>Submit</button>
 </body>
 
 </html>
