feat: make hero section of the page

--- a/index.html
+++ b/index.html
@@ -5,16 +5,66 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/font-style.css">
 	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="./css/normalize.css">
 </head>
 
 <body>
-	<button>Submit</button>
+	<div class="hero-container">
+		<div class="logo-container">
+			<img src="./assets/imgs/odin-logo.png" alt="odin-logo">
+			<p>ODIN</p>
+		</div>
+		<div class="credits">
+			<p>Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a
+					href="https://unsplash.com/">Unsplash</a>.</p>
+		</div>
+	</div>
+	<div class="main-section">
+		<p class="app-description">
+			This is not a real online service! You know you need something like this in your life to help you realize
+			your deepest dreams. Sign up <i>now</i> to get started.
+		</p>
+		<p>You <i>know</i> you want to.</p>
+
+		<form action="" method="get" class="form-container">
+			<div class="form-inputs">
+				<h1>Let's do this!</h1>
+				<p class="form-row">
+					<label for="first-name">FIRST NAME</label>
+					<input type="text" name="first-name" id="first-name">
+				</p>
+				<p class="form-row">
+					<label for="last-name">LAST NAME</label>
+					<input type="text" name="last-name" id="last-name">
+				</p>
+				<p class="form-row">
+					<label for="email">EMAIL</label>
+					<input type="email" name="email" id="email">
+				</p>
+				<p class="form-row">
+					<label for="phone-no">PHONE NUMBER</label>
+					<input type="tel" name="phone-no" id="phone-no">
+				</p>
+				<p class="form-row">
+					<label for="pwd">PASSWORD</label>
+					<input type="password" name="pwd" id="pwd">
+				</p>
+				<p class="form-row">
+					<label for="cfrm-pwd">CONFIRM PASSWORD</label>
+					<input type="password" name="cfrm-pwd" id="cfrm-pwd">
+			</div>
+			<div class="form-links">
+				<button type="submit">Create Account</button>
+				<p>Already have an account? <a href="#">Log in</a></p>
+			</div>
+			</p>
+		</form>
+	</div>
 </body>
 
 </html>
 
-<!-- Environmentally Friendly and Go-Green 
- https://www.facebook.com/gogreensavethefuture -->
+<!--  
+  -->
