fix: restructure form html, group related elements

--- a/index.html
+++ b/index.html
@@ -24,43 +24,51 @@
 	<div class="main-section">
 		<p class="app-description">
 			This is not a real online service! You know you need something like this in your life to help you realize
-			your deepest dreams. Sign up <i>now</i> to get started.
+			your deepest dreams.
 		</p>
+		<p>Sign up <i>now</i> to get started.</p>
 		<p>You <i>know</i> you want to.</p>
 
 		<form action="" method="get" class="form-container">
 			<div class="form-inputs">
 				<h1>Let's do this!</h1>
-				<p class="form-row">
-					<label for="first-name">FIRST NAME</label>
-					<input type="text" name="first-name" id="first-name">
-				</p>
-				<p class="form-row">
-					<label for="last-name">LAST NAME</label>
-					<input type="text" name="last-name" id="last-name">
-				</p>
-				<p class="form-row">
-					<label for="email">EMAIL</label>
-					<input type="email" name="email" id="email">
-				</p>
-				<p class="form-row">
-					<label for="phone-no">PHONE NUMBER</label>
-					<input type="tel" name="phone-no" id="phone-no">
-				</p>
-				<p class="form-row">
-					<label for="pwd">PASSWORD</label>
-					<input type="password" name="pwd" id="pwd">
-				</p>
-				<p class="form-row">
-					<label for="cfrm-pwd">CONFIRM PASSWORD</label>
-					<input type="password" name="cfrm-pwd" id="cfrm-pwd">
+				<div class="form-row">
+					<div class="form-group">
+						<label for="first-name">FIRST NAME</label>
+						<input type="text" name="first-name" id="first-name">
+					</div>
+
+					<div class="form-group">
+						<label for="last-name">LAST NAME</label>
+						<input type="text" name="last-name" id="last-name">
+					</div>
+				</div>
+
+				<div class="form-row">
+					<div class="form-group">
+						<label for="email">EMAIL</label>
+						<input type="email" name="email" id="email">
+					</div>
+					<div class="form-group">
+						<label for="phone-no">PHONE NUMBER</label>
+						<input type="tel" name="phone-no" id="phone-no">
+					</div>
+				</div>
+
+				<div class="form-row">
+					<div class="form-group">
+						<label for="pwd">PASSWORD</label>
+						<input type="password" name="pwd" id="pwd">
+					</div>
+					<div class="form-group">
+						<label for="cfrm-pwd">CONFIRM PASSWORD</label>
+						<input type="password" name="cfrm-pwd" id="cfrm-pwd">
+					</div>
+				</div>
 			</div>
-			<div class="form-links">
-				<button type="submit">Create Account</button>
-				<p>Already have an account? <a href="#">Log in</a></p>
-			</div>
-			</p>
+			<button type="submit">Create Account</button>
 		</form>
+		<div>Already have an account? <a href="#">Log in</a></div>
 	</div>
 </body>
 
